--- a/css/styles.css
+++ b/css/styles.css
@@ -11732,32 +11732,44 @@ html {
     left: -2vw;
   }
 
+  .image-link {
+    position: relative;
+    width: 80%; /* Ajuste cette valeur selon tes besoins */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .image-link img {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    width: 300px; /* Taille de l'image */
-    height: auto;
+    width: 100%;
+    height: auto; /* Maintient le ratio de l'image */
+    border-radius: 20%;
   }
 
   .image-link img:hover {
     transform: scale(1.1);
   }
-  .image-link .image-layer{
+
+  .image-layer {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: #063ef4;
+    background: rgba(255, 255, 255, 0.78);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
     padding: 0 4rem;
-    transform: translateY(100%);
+    transform: translateY(200%);
     transition: .5s ease;
+    border-radius: 20%; /* Doit correspondre au border-radius de l'image */
   }
-  .image-link .image-layer:hover {
+
+  .image-link:hover .image-layer {
     transform: translateY(0);
   }
   .hover-element {
